# mcp

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: unit_tests.yaml
crates/mcp-client-sse/: Cargo.toml
crates/mcp-client-sse/src/: client.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: callback.rs  client.rs  error.rs  lib.rs  protocol.rs  response.rs  transport.rs
crates/mcp-core/src/client/: mod.rs
crates/mcp-transport-sse/: Cargo.toml
crates/mcp-transport-sse/src/: channel.rs  client.rs  error.rs  lib.rs  params.rs  server.rs
crates/mcp-transport-stdio/: Cargo.toml
crates/mcp-transport-stdio/src/: client.rs  lib.rs  params.rs  server.rs
crates/mcp-types/: Cargo.toml  README.md  build.rs
crates/mcp-types/src/: lib.rs  types.rs  v2024_11_05.rs
crates/mcp-types/src/v2024_11_05/: convert.rs  error.rs  messages.rs  mod.rs  request_id.rs
crates/mcp-types/tests/: common.rs  schema_test.rs
crates/mcpz/: Cargo.toml
crates/mcpz/src/: protocol.rs  transport.rs
crates/mcpz/src/client/: mod.rs
crates/mcpz/src/server/: mod.rs
