[workspace]
members = [
    "crates/mcp-core",
    "crates/mcp-types"
]
default-members = [
    "crates/mcp-core",
    "crates/mcp-types"
]

resolver = "2"

[workspace.dependencies]
async-trait = "0.1.86"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "tracing"] }
