[workspace]
members = [
    "crates/mcpz",
    # "crates/mcp-transport-sse",
    # "crates/mcp-transport-stdio",
    "crates/mcp-types",
]
default-members = [
    "crates/mcpz",
    # "crates/mcp-transport-sse",
    # "crates/mcp-transport-stdio",
    "crates/mcp-types"
]

resolver = "2"

[workspace.dependencies]
async-trait = "0.1.86"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = { version = "0.1.41" }
