[package]
name = "mcp-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
uuid = ["dep:uuid"]

[dependencies]
async-trait = { workspace = true }
mcp-types = { path = "../mcp-types" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.12.1", features = ["v4", "fast-rng"], optional = true }

[dev-dependencies]
mcp-types = { path = "../mcp-types" }
serde_json = { workspace = true }
tokio = { workspace = true }
