[package]
name = "mcp-transport-sse"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-types = { path = "../mcp-types" }
async-trait = { workspace = true }
thiserror = "2.0.11"
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.13"
url = "2.5.4"
websocket = "0.27.1"
