[package]
name = "mcp-transport-sse"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-types = { path = "../mcp-types" }
async-trait = { workspace = true }
futures = "0.3.31"
reqwest = "0.12.12"
reqwest-websocket = "0.4.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.11"
tokio = { workspace = true }
tokio-util = "0.7.13"
url = "2.5.4"
