[package]
name = "mcp-transport-sse"
version = "0.1.0"
description = "SSE transport implementation for the Model Context Protocol"
edition = "2021"

[features]
default = ["client", "server"]
client = []
server = ["dep:axum", "dep:tower-http"]

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-types = { path = "../mcp-types" }
async-trait = { workspace = true }
axum = { version = "0.8.1", optional = true }
futures = "0.3.31"
reqwest = "0.12.12"
reqwest-websocket = "0.4.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.11"
tokio = { workspace = true }
tokio-util = "0.7.13"
tower-http = { version = "0.6.2", features = ["cors"], optional = true }
url = "2.5.4"
