[package]
name = "mcp-types"
version = "0.1.0"
description = "Generated bindings from the Model Context Protocol (MCP) JSON Schema(s)"
authors = ["Collin Brittain <collin@iqlusion.io>"]
edition = "2021"

[features]
default = ["2024_11_05"]
2024_11_05 = []

[dependencies]
jsonschema = "0.29.0"
schemars = "0.8.21"
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.20.3"

[dev-dependencies]
serde_json = { workspace = true }

[build-dependencies]
prettyplease = "0.2.29"
schemars = "0.8.21"
serde_json = { workspace = true }
syn = "2.0.96"
typify = "0.3.0"
